--- a/indexwwww.html
+++ b/indexwwww.html
@@ -4,8 +4,8 @@
 </head>
 <body>
     <p>Rudi first test</p>
-    <p>fds</p>
-    <p>fgwefewfew</p>
-<h1>faesfawedddadfawe fef</h1>
+    <p>paragraph 1</p>
+    <p>paragraph 2</p>
+<h1>heading 1</h1>
 </body>
 </html>
